Fixed an issue with GitHub Page not showing the first Image when clicked on the URL

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,10 +58,9 @@ p {
 /* Background img */
 
 main img {
-    height: 800px;
-    width: 100%;
+    height: 1140px;
+    width: 1903px;
     margin-bottom: 25px;
-    background-image: url("./assets/images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
 }
